--- a/style.css
+++ b/style.css
@@ -1,15 +1,8 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
-  
+
   body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
     overflow: hidden;
   }
   
@@ -18,22 +11,27 @@
     margin: 0 auto;
   }
   
-  textarea {
+  textArea {
     width: 960px;
     height: 300px;
     margin-bottom: 50px;
   }
   
-  .keyboard {
+  .keyBoard {
     width: 715px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
   }
   
   .row {
     display: flex;
+    flex-direction: row;
     width: 100%;
     height: 40px;
     margin-bottom: 8px;
+    display: flex;
+    flex-direction: row;
   }
   
   .key {
@@ -51,7 +49,16 @@
     user-select: none;
     transition: background .2s;
   }
+
+  .hidden{
+    display: none;
+  }
+
+  .active {
+    background-color: #0ecf72;
+  }
   
+  /*
   .KeyW,
   .KeyA,
   .KeyS,
@@ -65,7 +72,7 @@
   .ArrowRight {
     background-color: #ff6363;
   }
-  
+  */
   .CapsLock {
     width: 75px;
   }
@@ -95,10 +102,7 @@
     width: 56px;
   }
   
-  .active {
-    background-color: #103020;
-  }
-  
+ 
   .Space {
     width: 304px;
   }
