--- a/style.css
+++ b/style.css
@@ -42,12 +42,11 @@
     line-height: 40px;
     text-align: center;
     color: #2d2d2d;
-    background: #fff;
+    background: rgb(204, 181, 181);
     border: 1px solid #2d2d2d;
     border-radius: 3px;
     cursor: pointer;
     user-select: none;
-    transition: background .2s;
   }
 
   .hidden{
@@ -55,24 +54,12 @@
   }
 
   .active {
-    background-color: #0ecf72;
+    background-color: #b90c0c;
+    transition-duration: 1.5s;
+    transition-timing-function: cubic-bezier(0.1, 0.8, 0.5, 2);
   }
-  
-  /*
-  .KeyW,
-  .KeyA,
-  .KeyS,
-  .KeyD {
-    background-color: #ff6363;
-  }
-  
-  .ArrowUp,
-  .ArrowDown,
-  .ArrowLeft,
-  .ArrowRight {
-    background-color: #ff6363;
-  }
-  */
+
+
   .CapsLock {
     width: 75px;
   }
